app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kovaiplay
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kovaiplay-app
  namespace: kovaiplay
  labels:
    app: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: stage-private
      containers:
      - name: frontend
        image: sathish8329/kovaiplay:v1
        ports:
        - containerPort: 80   # Ensure this matches the Service targetPort
---
apiVersion: v1
kind: Service
metadata:
  name: kovaiplay-frontend-service
  namespace: kovaiplay
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80          # External port exposed for the service
      targetPort: 80    # This matches containerPort in Deployment
  type: ClusterIP        # Change to LoadBalancer if you need external access
